# hello-flatten

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
hello_flatten/hello/: world.py
hello_flatten/hello/nested/: misc.sh
tests/: test_hello.py
