[tool.poetry]
name = "hello-flatten"
version = "0.1.0"
description = ""
authors = ["nathan <7707104+nlile@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hello_flatten"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
tenacity = "^8.2.3"
loguru = "^0.7.2"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
ruff = "^0.2.1"
mypy = "^1.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=hello_flatten --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "COM", "C4", "UP", "PT", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["hello_flatten"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello-flatten = "hello_flatten.hello.world:main"
